update documentation android 2.2.0

--- a/android/api/io/scanbot/sdk/ui/view/camera/DocumentScannerActivity.html
+++ b/android/api/io/scanbot/sdk/ui/view/camera/DocumentScannerActivity.html
@@ -166,12 +166,19 @@ extends <a href=BaseDocumentScannerActivity.html>BaseDocumentScannerActivity</a>
                                         
                                         <tr class="rowColor">
                                             <td class="colFirst"><code>public final class</code></td>
+                                            <th class="colSecond" scope="row"><code><a href="DocumentScannerActivity.DocumentScannerSettings.html">DocumentScannerActivity.DocumentScannerSettings</a></span></code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr class="altColor">
+                                            <td class="colFirst"><code>public final class</code></td>
                                             <th class="colSecond" scope="row"><code><a href="DocumentScannerActivity.ResultContract.html">DocumentScannerActivity.ResultContract</a></span></code>
                                             </th>
                                             <td class="colLast"><p>Predefined AndroidX Activity Result API contract, ScanbotSDK-flavored.</p><p>Implementation of ActivityResultContract for Document RTU scanner activity.</p><p>Encapsulates all the hassle of input and result data mapping into- and from intent's bundle.</p><p>Please refer to Scanbot SDK documentation: https://docs.scanbot.io/document-scanner-sdk/android/features/feature-overview/</p></td>
                                         </tr>
                                         
-                                        <tr class="altColor">
+                                        <tr class="rowColor">
                                             <td class="colFirst"><code>public class</code></td>
                                             <th class="colSecond" scope="row"><code><a href="DocumentScannerActivity.Companion.html">DocumentScannerActivity.Companion</a></span></code>
                                             </th>
