--- a/android/api/io/scanbot/sdk/ui/view/camera/DocumentScannerNavigationEvent.CloseSnapping.html
+++ b/android/api/io/scanbot/sdk/ui/view/camera/DocumentScannerNavigationEvent.CloseSnapping.html
@@ -166,6 +166,24 @@ extends <a href=DocumentScannerNavigationEvent.html>DocumentScannerNavigationEve
                                             <td class="colLast"></td>
                                         </tr>
                                         
+                                        <tr class="rowColor">
+                                            <td class="colFirst"><code>private final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=DocumentScannerNavigationEvent.CloseSnapping.html#flashEnabled>flashEnabled</a></code></th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr class="altColor">
+                                            <td class="colFirst"><code>private final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=DocumentScannerNavigationEvent.CloseSnapping.html#multiPageEnabled>multiPageEnabled</a></code></th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr class="rowColor">
+                                            <td class="colFirst"><code>private final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=DocumentScannerNavigationEvent.CloseSnapping.html#autoSnappingEnabled>autoSnappingEnabled</a></code></th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                     </table>
                                 </div>
                             </li>
@@ -192,7 +210,7 @@ extends <a href=DocumentScannerNavigationEvent.html>DocumentScannerNavigationEve
                                         
                                             <tr class="altColor">
                                                 <th class="colConstructorName" scope="row"><code><span class="memberNameLink"><a
-                                                        href="#DocumentScannerNavigationEvent.CloseSnapping(List)">DocumentScannerNavigationEvent.CloseSnapping</a></span>(<a href=https://developer.android.com/reference/kotlin/java/util/List.html>List</a>&lt;<a href=../../../persistence/Page.html>Page</a>&gt; snappedPages)</code></th>
+                                                        href="#DocumentScannerNavigationEvent.CloseSnapping(List,Boolean,Boolean,Boolean)">DocumentScannerNavigationEvent.CloseSnapping</a></span>(<a href=https://developer.android.com/reference/kotlin/java/util/List.html>List</a>&lt;<a href=../../../persistence/Page.html>Page</a>&gt; snappedPages, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> flashEnabled, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> multiPageEnabled, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> autoSnappingEnabled)</code></th>
                                                 <td class="colLast"></td>
                                             </tr>
                                         
@@ -253,6 +271,30 @@ extends <a href=DocumentScannerNavigationEvent.html>DocumentScannerNavigationEve
                                             <td class="colLast"></td>
                                         </tr>
                                         
+                                        <tr id="i1" class="rowColor">
+                                            <td class="colFirst"><code>final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=DocumentScannerNavigationEvent.CloseSnapping.html#getFlashEnabled()>getFlashEnabled</a>() </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr id="i2" class="altColor">
+                                            <td class="colFirst"><code>final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=DocumentScannerNavigationEvent.CloseSnapping.html#getMultiPageEnabled()>getMultiPageEnabled</a>() </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr id="i3" class="rowColor">
+                                            <td class="colFirst"><code>final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=DocumentScannerNavigationEvent.CloseSnapping.html#getAutoSnappingEnabled()>getAutoSnappingEnabled</a>() </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                         </tbody>
                                     </table>
                                 </div>
@@ -284,11 +326,11 @@ extends <a href=DocumentScannerNavigationEvent.html>DocumentScannerNavigationEve
                             </a>
                                 <h3>Constructor Detail</h3>
                                 
-                                <a name="DocumentScannerNavigationEvent.CloseSnapping(List)"></a>
+                                <a name="DocumentScannerNavigationEvent.CloseSnapping(List,Boolean,Boolean,Boolean)"></a>
                                 <ul class="blockList">
                                     <li class="blockList">
                                         <h4>DocumentScannerNavigationEvent.CloseSnapping</h4>
-                                        <pre>DocumentScannerNavigationEvent.CloseSnapping(<a href=https://developer.android.com/reference/kotlin/java/util/List.html>List</a>&lt;<a href=../../../persistence/Page.html>Page</a>&gt; snappedPages)</pre>
+                                        <pre>DocumentScannerNavigationEvent.CloseSnapping(<a href=https://developer.android.com/reference/kotlin/java/util/List.html>List</a>&lt;<a href=../../../persistence/Page.html>Page</a>&gt; snappedPages, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> flashEnabled, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> multiPageEnabled, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> autoSnappingEnabled)</pre>
                                         <div class="block"></div>
                                         
                                     </li>
@@ -311,11 +353,56 @@ extends <a href=DocumentScannerNavigationEvent.html>DocumentScannerNavigationEve
                                     <!--   -->
                                 </a>
                                 <ul class=
-                                              "blockListLast"
+                                              "blockList"
                                           >
                                     <li class="blockList">
                                         <h4>getSnappedPages</h4>
                                         <pre class="methodSignature"> final <a href=https://developer.android.com/reference/kotlin/java/util/List.html>List</a>&lt;<a href=../../../persistence/Page.html>Page</a>&gt; <a href=DocumentScannerNavigationEvent.CloseSnapping.html#getSnappedPages()>getSnappedPages</a>()</pre>
+                                        <div class="block"></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="getFlashEnabled()">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>getFlashEnabled</h4>
+                                        <pre class="methodSignature"> final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> <a href=DocumentScannerNavigationEvent.CloseSnapping.html#getFlashEnabled()>getFlashEnabled</a>()</pre>
+                                        <div class="block"></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="getMultiPageEnabled()">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockList"
+                                          >
+                                    <li class="blockList">
+                                        <h4>getMultiPageEnabled</h4>
+                                        <pre class="methodSignature"> final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> <a href=DocumentScannerNavigationEvent.CloseSnapping.html#getMultiPageEnabled()>getMultiPageEnabled</a>()</pre>
+                                        <div class="block"></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="getAutoSnappingEnabled()">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockListLast"
+                                          >
+                                    <li class="blockList">
+                                        <h4>getAutoSnappingEnabled</h4>
+                                        <pre class="methodSignature"> final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> <a href=DocumentScannerNavigationEvent.CloseSnapping.html#getAutoSnappingEnabled()>getAutoSnappingEnabled</a>()</pre>
                                         <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
