--- a/android/api/io/scanbot/sdk/ui/view/camera/package-summary.html
+++ b/android/api/io/scanbot/sdk/ui/view/camera/package-summary.html
@@ -109,11 +109,15 @@ var pathtoroot = "../../../../../../";
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentScannerActivity.Result.html>Result</a></th><td class="colLast"></td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=DocumentScannerActivity.ResultContract.html>ResultContract</a></th><td class="colLast">Predefined AndroidX Activity Result API contract, ScanbotSDK-flavored.</td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=DocumentScannerActivity.DocumentScannerSettings.html>DocumentScannerSettings</a></th><td class="colLast"></td></tr>
 
-    <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentScannerActivity.html>DocumentScannerActivity</a></th><td class="colLast"></td></tr>
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=DocumentScannerActivity.ResultContract.html>ResultContract</a></th><td class="colLast">Predefined AndroidX Activity Result API contract, ScanbotSDK-flavored.</td></tr>
 
-    <tr class="rowColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerActivity.Result.html>Result</a></th><td class="colLast"></td></tr>
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=DocumentScannerActivity.html>DocumentScannerActivity</a></th><td class="colLast"></td></tr>
+
+    <tr class="altColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerActivity.Result.html>Result</a></th><td class="colLast"></td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerActivity.FinderDocumentScannerSettings.html>FinderDocumentScannerSettings</a></th><td class="colLast"></td></tr>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=FinderDocumentScannerActivity.ResultContract.html>ResultContract</a></th><td class="colLast">Predefined AndroidX Activity Result API contract, ScanbotSDK-flavored.</td></tr>
 
