--- a/android/api/io/scanbot/sdk/ui/view/camera/DocumentScannerActivity.Result.html
+++ b/android/api/io/scanbot/sdk/ui/view/camera/DocumentScannerActivity.Result.html
@@ -184,6 +184,12 @@ public final class <span class="typeNameLabel"><a href=DocumentScannerActivity.R
                                             <td class="colLast"></td>
                                         </tr>
                                         
+                                        <tr class="altColor">
+                                            <td class="colFirst"><code>private final <a href=DocumentScannerActivity.DocumentScannerSettings.html>DocumentScannerActivity.DocumentScannerSettings</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=DocumentScannerActivity.Result.html#settings>settings</a></code></th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                     </table>
                                 </div>
                             </li>
@@ -210,7 +216,7 @@ public final class <span class="typeNameLabel"><a href=DocumentScannerActivity.R
                                         
                                             <tr class="altColor">
                                                 <th class="colConstructorName" scope="row"><code><span class="memberNameLink"><a
-                                                        href="#DocumentScannerActivity.Result(Integer,List,Boolean,Boolean)">DocumentScannerActivity.Result</a></span>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> resultCode, <a href=https://developer.android.com/reference/kotlin/java/util/List.html>List</a>&lt;<a href=../../../persistence/Page.html>Page</a>&gt; result, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> isLicenseInvalid, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> sdkIsNotInitialized)</code></th>
+                                                        href="#DocumentScannerActivity.Result(Integer,List,Boolean,Boolean,DocumentScannerActivity.DocumentScannerSettings)">DocumentScannerActivity.Result</a></span>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> resultCode, <a href=https://developer.android.com/reference/kotlin/java/util/List.html>List</a>&lt;<a href=../../../persistence/Page.html>Page</a>&gt; result, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> isLicenseInvalid, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> sdkIsNotInitialized, <a href=DocumentScannerActivity.DocumentScannerSettings.html>DocumentScannerActivity.DocumentScannerSettings</a> settings)</code></th>
                                                 <td class="colLast"></td>
                                             </tr>
                                         
@@ -295,6 +301,14 @@ public final class <span class="typeNameLabel"><a href=DocumentScannerActivity.R
                                             <td class="colLast">Indicates whether RTU returned due to Scanbot SDK is not initialized.</td>
                                         </tr>
                                         
+                                        <tr id="i4" class="altColor">
+                                            <td class="colFirst"><code>final <a href=DocumentScannerActivity.DocumentScannerSettings.html>DocumentScannerActivity.DocumentScannerSettings</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=DocumentScannerActivity.Result.html#getSettings()>getSettings</a>() </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                         </tbody>
                                     </table>
                                 </div>
@@ -326,11 +340,11 @@ public final class <span class="typeNameLabel"><a href=DocumentScannerActivity.R
                             </a>
                                 <h3>Constructor Detail</h3>
                                 
-                                <a name="DocumentScannerActivity.Result(Integer,List,Boolean,Boolean)"></a>
+                                <a name="DocumentScannerActivity.Result(Integer,List,Boolean,Boolean,DocumentScannerActivity.DocumentScannerSettings)"></a>
                                 <ul class="blockList">
                                     <li class="blockList">
                                         <h4>DocumentScannerActivity.Result</h4>
-                                        <pre>DocumentScannerActivity.Result(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> resultCode, <a href=https://developer.android.com/reference/kotlin/java/util/List.html>List</a>&lt;<a href=../../../persistence/Page.html>Page</a>&gt; result, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> isLicenseInvalid, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> sdkIsNotInitialized)</pre>
+                                        <pre>DocumentScannerActivity.Result(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> resultCode, <a href=https://developer.android.com/reference/kotlin/java/util/List.html>List</a>&lt;<a href=../../../persistence/Page.html>Page</a>&gt; result, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> isLicenseInvalid, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> sdkIsNotInitialized, <a href=DocumentScannerActivity.DocumentScannerSettings.html>DocumentScannerActivity.DocumentScannerSettings</a> settings)</pre>
                                         <div class="block"></div>
                                         
                                     </li>
@@ -398,12 +412,27 @@ public final class <span class="typeNameLabel"><a href=DocumentScannerActivity.R
                                     <!--   -->
                                 </a>
                                 <ul class=
-                                              "blockListLast"
+                                              "blockList"
                                           >
                                     <li class="blockList">
                                         <h4>getSdkIsNotInitialized</h4>
                                         <pre class="methodSignature"> <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> <a href=DocumentScannerActivity.Result.html#getSdkIsNotInitialized()>getSdkIsNotInitialized</a>()</pre>
                                         <div class="block"><p>Indicates whether RTU returned due to Scanbot SDK is not initialized. In case of <code>true</code> no result should be expected.</p></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
+                                
+                                <a id="getSettings()">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockListLast"
+                                          >
+                                    <li class="blockList">
+                                        <h4>getSettings</h4>
+                                        <pre class="methodSignature"> final <a href=DocumentScannerActivity.DocumentScannerSettings.html>DocumentScannerActivity.DocumentScannerSettings</a> <a href=DocumentScannerActivity.Result.html#getSettings()>getSettings</a>()</pre>
+                                        <div class="block"></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
