--- a/android/api/io/scanbot/sdk/ui/view/camera/FinderDocumentScannerActivity.html
+++ b/android/api/io/scanbot/sdk/ui/view/camera/FinderDocumentScannerActivity.html
@@ -166,12 +166,19 @@ extends <a href=BaseFinderDocumentScannerActivity.html>BaseFinderDocumentScanner
                                         
                                         <tr class="rowColor">
                                             <td class="colFirst"><code>public final class</code></td>
+                                            <th class="colSecond" scope="row"><code><a href="FinderDocumentScannerActivity.FinderDocumentScannerSettings.html">FinderDocumentScannerActivity.FinderDocumentScannerSettings</a></span></code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
+                                        <tr class="altColor">
+                                            <td class="colFirst"><code>public final class</code></td>
                                             <th class="colSecond" scope="row"><code><a href="FinderDocumentScannerActivity.ResultContract.html">FinderDocumentScannerActivity.ResultContract</a></span></code>
                                             </th>
                                             <td class="colLast"><p>Predefined AndroidX Activity Result API contract, ScanbotSDK-flavored.</p><p>Implementation of ActivityResultContract for Document RTU scanner activity.</p><p>Encapsulates all the hassle of input and result data mapping into- and from intent's bundle.</p><p>Please refer to Scanbot SDK documentation: https://docs.scanbot.io/document-scanner-sdk/android/features/feature-overview/</p></td>
                                         </tr>
                                         
-                                        <tr class="altColor">
+                                        <tr class="rowColor">
                                             <td class="colFirst"><code>public class</code></td>
                                             <th class="colSecond" scope="row"><code><a href="FinderDocumentScannerActivity.Companion.html">FinderDocumentScannerActivity.Companion</a></span></code>
                                             </th>
