--- a/android/api/io/scanbot/sdk/ui/view/camera/FinderDocumentScannerActivity.FinderDocumentScannerSettings.html
+++ b/android/api/io/scanbot/sdk/ui/view/camera/FinderDocumentScannerActivity.FinderDocumentScannerSettings.html
@@ -1,25 +1,25 @@
 <!DOCTYPE HTML>
 <!-- NewPage -->
 <html lang="en"><head>
-    <title>Companion </title>
+    <title>FinderDocumentScannerSettings </title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="dc.created" content="2020-03-25">
-    <link rel="stylesheet" type="text/css" href="../../../../stylesheet.css" title="Style">
-    <link rel="stylesheet" type="text/css" href="../../../../dokka-javadoc-stylesheet.css" title="Style">
-    <link rel="stylesheet" type="text/css" href="../../../../jquery/jquery-ui.css" title="Style">
-    <script type="text/javascript" src="../../../../jquery/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="../../../../jquery/jquery-migrate-3.4.0.min.js"></script>
-    <script type="text/javascript" src="../../../../jquery/jquery-ui.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../../../../../stylesheet.css" title="Style">
+    <link rel="stylesheet" type="text/css" href="../../../../../../dokka-javadoc-stylesheet.css" title="Style">
+    <link rel="stylesheet" type="text/css" href="../../../../../../jquery/jquery-ui.css" title="Style">
+    <script type="text/javascript" src="../../../../../../jquery/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="../../../../../../jquery/jquery-migrate-3.4.0.min.js"></script>
+    <script type="text/javascript" src="../../../../../../jquery/jquery-ui.js"></script>
 
-    <script type="text/javascript" src="../../../../search.js"></script>
-    <script async type="text/javascript" src="../../../../module-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../package-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../type-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../member-search-index.js"></script>
-    <script async type="text/javascript" src="../../../../tag-search-index.js"></script>
+    <script type="text/javascript" src="../../../../../../search.js"></script>
+    <script async type="text/javascript" src="../../../../../../module-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../package-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../type-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../member-search-index.js"></script>
+    <script async type="text/javascript" src="../../../../../../tag-search-index.js"></script>
 </head><body>
 <script type="text/javascript">
-var pathtoroot = "../../../../";
+var pathtoroot = "../../../../../../";
 </script>
 <noscript>
     <div>JavaScript is disabled on your browser.</div>
@@ -36,18 +36,19 @@ var pathtoroot = "../../../../";
                     <!--   -->
                 </a>
                 <ul class="navList" title="Navigation">
-    <li><a href="../../../../index.html">Overview</a></li>
+    <li><a href="../../../../../../index.html">Overview</a></li>
     
     <li><a href="package-summary.html">Package</a></li>
     
+    <li class="navBarCell1Rev">Class</li>
     
     
-    <li><a href="../../../../deprecated.html">Deprecated</a></li>
-    <li><a href="../../../../index-files/index-1.html">Index</a></li>
+    <li><a href="../../../../../../deprecated.html">Deprecated</a></li>
+    <li><a href="../../../../../../index-files/index-1.html">Index</a></li>
 </ul></div>
             <div class="subNav">
 <ul class="navList" id="allclasses_navbar_top" style="display: block;">
-    <li><a href="../../../../allclasses.html">All&nbsp;Classes</a></li>
+    <li><a href="../../../../../../allclasses.html">All&nbsp;Classes</a></li>
 </ul>
 
 
@@ -81,7 +82,7 @@ var pathtoroot = "../../../../";
 <main role="main">
     <div class="header">
         <div class="subTitle"><span class="packageLabelInType">Package</span>&nbsp;<a href="package-summary.html"></a></div>
-        <h2 title="Object MedicalCertificateInfoBox.Companion" class="title">Object MedicalCertificateInfoBox.Companion</h2>
+        <h2 title="Class FinderDocumentScannerActivity.FinderDocumentScannerSettings" class="title">Class FinderDocumentScannerActivity.FinderDocumentScannerSettings</h2>
     </div>
     <div class="contentContainer">
         <!-- <ul class="inheritance">
@@ -100,14 +101,17 @@ var pathtoroot = "../../../../";
                         <dt>All Implemented Interfaces:</dt>
                         <dd>
                             
+                            <code>android.os.Parcelable</code>
+                            
+                            
                         </dd>
                     </dl>
                     
                     <hr>
                     <pre class="wrap-overflow">
 
-public class <span class="typeNameLabel"><a href=MedicalCertificateInfoBox.Companion.html>MedicalCertificateInfoBox.Companion</a></span>
-
+public final class <span class="typeNameLabel"><a href=FinderDocumentScannerActivity.FinderDocumentScannerSettings.html>FinderDocumentScannerActivity.FinderDocumentScannerSettings</a></span>
+ implements <a href=https://developer.android.com/reference/kotlin/android/os/Parcelable.html>Parcelable</a>
                     </pre>
                     <div class="block"></div>
                 </li>
@@ -157,8 +161,8 @@ public class <span class="typeNameLabel"><a href=MedicalCertificateInfoBox.Compa
                                         </tr>
                                         
                                         <tr class="altColor">
-                                            <td class="colFirst"><code>public final static <a href=MedicalCertificateInfoBox.Companion.html>MedicalCertificateInfoBox.Companion</a></code></td>
-                                            <th class="colSecond" scope="row"><code><a href=MedicalCertificateInfoBox.Companion.html#INSTANCE>INSTANCE</a></code></th>
+                                            <td class="colFirst"><code>private final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a></code></td>
+                                            <th class="colSecond" scope="row"><code><a href=FinderDocumentScannerActivity.FinderDocumentScannerSettings.html#flashEnabled>flashEnabled</a></code></th>
                                             <td class="colLast"></td>
                                         </tr>
                                         
@@ -185,6 +189,12 @@ public class <span class="typeNameLabel"><a href=MedicalCertificateInfoBox.Compa
                                             <th class="colLast" scope="col">Description</th>
                                         </tr>
 
+                                        
+                                            <tr class="altColor">
+                                                <th class="colConstructorName" scope="row"><code><span class="memberNameLink"><a
+                                                        href="#FinderDocumentScannerActivity.FinderDocumentScannerSettings(Boolean)">FinderDocumentScannerActivity.FinderDocumentScannerSettings</a></span>(<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> flashEnabled)</code></th>
+                                                <td class="colLast"></td>
+                                            </tr>
                                         
 
                                         </tbody>
@@ -235,6 +245,14 @@ public class <span class="typeNameLabel"><a href=MedicalCertificateInfoBox.Compa
                                             <th class="colLast" scope="col">Description</th>
                                         </tr>
                                         
+                                        <tr id="i0" class="altColor">
+                                            <td class="colFirst"><code>final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a></code>
+                                            </td>
+                                            <th class="colSecond" scope="row"><code><a href=FinderDocumentScannerActivity.FinderDocumentScannerSettings.html#getFlashEnabled()>getFlashEnabled</a>() </code>
+                                            </th>
+                                            <td class="colLast"></td>
+                                        </tr>
+                                        
                                         </tbody>
                                     </table>
                                 </div>
@@ -266,6 +284,16 @@ public class <span class="typeNameLabel"><a href=MedicalCertificateInfoBox.Compa
                             </a>
                                 <h3>Constructor Detail</h3>
                                 
+                                <a name="FinderDocumentScannerActivity.FinderDocumentScannerSettings(Boolean)"></a>
+                                <ul class="blockList">
+                                    <li class="blockList">
+                                        <h4>FinderDocumentScannerActivity.FinderDocumentScannerSettings</h4>
+                                        <pre>FinderDocumentScannerActivity.FinderDocumentScannerSettings(<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> flashEnabled)</pre>
+                                        <div class="block"></div>
+                                        
+                                    </li>
+                                </ul>
+                                
                             </li>
                         </ul>
                     </section>
@@ -278,6 +306,21 @@ public class <span class="typeNameLabel"><a href=MedicalCertificateInfoBox.Compa
                                 <!--   -->
                             </a>
                                 <h3>Method Detail</h3>
+                                
+                                <a id="getFlashEnabled()">
+                                    <!--   -->
+                                </a>
+                                <ul class=
+                                              "blockListLast"
+                                          >
+                                    <li class="blockList">
+                                        <h4>getFlashEnabled</h4>
+                                        <pre class="methodSignature"> final <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> <a href=FinderDocumentScannerActivity.FinderDocumentScannerSettings.html#getFlashEnabled()>getFlashEnabled</a>()</pre>
+                                        <div class="block"></div>
+                                        
+                                        <!-- TODO missing return annotation -->
+                                    </li>
+                                </ul>
                                 
                             </li>
                         </ul>
@@ -300,21 +343,22 @@ public class <span class="typeNameLabel"><a href=MedicalCertificateInfoBox.Compa
                 <!--   -->
             </a>
             <ul class="navList" title="Navigation">
-    <li><a href="../../../../index.html">Overview</a></li>
+    <li><a href="../../../../../../index.html">Overview</a></li>
     
     <li><a href="package-summary.html">Package</a></li>
     
+    <li class="navBarCell1Rev">Class</li>
     
     
-    <li><a href="../../../../deprecated.html">Deprecated</a></li>
-    <li><a href="../../../../index-files/index-1.html">Index</a></li>
+    <li><a href="../../../../../../deprecated.html">Deprecated</a></li>
+    <li><a href="../../../../../../index-files/index-1.html">Index</a></li>
 </ul></div>
         <a id="skip.navbar.bottom">
             <!--   -->
         </a>
         <div class="subNav">
 <ul class="navList" id="allclasses_navbar_top" style="display: block;">
-    <li><a href="../../../../allclasses.html">All&nbsp;Classes</a></li>
+    <li><a href="../../../../../../allclasses.html">All&nbsp;Classes</a></li>
 </ul>
 <div>
 <script type="text/javascript"><!--
