--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/BarcodeCameraViewModel.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/BarcodeCameraViewModel.html
@@ -542,9 +542,9 @@ public final class <span class="typeNameLabel"><a href=BarcodeCameraViewModel.ht
                                         <tr id="i31" class="rowColor">
                                             <td class="colFirst"><code><a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a></code>
                                             </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeCameraViewModel.html#setGs1DecodingEnabled(java.lang.Boolean)>setGs1DecodingEnabled</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> gs1DecodingEnabled) </code>
+                                            <th class="colSecond" scope="row"><code><a href=BarcodeCameraViewModel.html#setGs1HandlingMode(io.scanbot.sdk.barcode.entity.Gs1Handling)>setGs1HandlingMode</a>(<a href=../../../barcode/entity/Gs1Handling.html>Gs1Handling</a> gs1Handling) </code>
                                             </th>
-                                            <td class="colLast">When this set to <code>true</code>, the scanner assumes that the barcode can be a GS1 barcode.</td>
+                                            <td class="colLast">GS1 Codes Handling mode.</td>
                                         </tr>
                                         
                                         <tr id="i32" class="altColor">
@@ -1154,16 +1154,16 @@ public final class <span class="typeNameLabel"><a href=BarcodeCameraViewModel.ht
                                     </li>
                                 </ul>
                                 
-                                <a id="setGs1DecodingEnabled(java.lang.Boolean)">
+                                <a id="setGs1HandlingMode(io.scanbot.sdk.barcode.entity.Gs1Handling)">
                                     <!--   -->
                                 </a>
                                 <ul class=
                                               "blockList"
                                           >
                                     <li class="blockList">
-                                        <h4>setGs1DecodingEnabled</h4>
-                                        <pre class="methodSignature"> <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=BarcodeCameraViewModel.html#setGs1DecodingEnabled(java.lang.Boolean)>setGs1DecodingEnabled</a>(<a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> gs1DecodingEnabled)</pre>
-                                        <div class="block"><p>When this set to <code>true</code>, the scanner assumes that the barcode can be a GS1 barcode. Turn it off, if you don't want to see decoded FNC1 characters (&quot;]C1&quot; and ASCII char 29). The default is <code>true</code>. NOTE: Currently works for CODE128 barcodes only!</p></div>
+                                        <h4>setGs1HandlingMode</h4>
+                                        <pre class="methodSignature"> <a href=https://kotlinlang.org/api/latest/jvm/stdlib/kotlin/-unit/index.html>Unit</a> <a href=BarcodeCameraViewModel.html#setGs1HandlingMode(io.scanbot.sdk.barcode.entity.Gs1Handling)>setGs1HandlingMode</a>(<a href=../../../barcode/entity/Gs1Handling.html>Gs1Handling</a> gs1Handling)</pre>
+                                        <div class="block"><p>GS1 Codes Handling mode. The default value is <a href=../../../barcode/entity/Gs1Handling.html#PARSE>Gs1Handling.PARSE</a>.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
